fixed campaign stage alignment

--- a/styles/components/shared/my/campaigns/stages.scss
+++ b/styles/components/shared/my/campaigns/stages.scss
@@ -24,7 +24,7 @@
         &:after {
           content: " ";
           position: absolute;
-          left: 46%;
+          left: 42%;
           opacity: 1;
           margin: 0 auto;
           bottom: 0px;
